# misis-id

./: .gitignore  MANIFEST.in  Makefile  README.md  USAGE.md  main.py  pyproject.toml  requirements.txt  setup.py
misis_id/: __init__.py  cli.py  client.py  exceptions.py  models.py  version.py
